--- a/OMNIFOOD/index.html
+++ b/OMNIFOOD/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="vendors/css/normalize.css"/>
     <link rel="stylesheet" href="vendors/css/grid.css"/>
+    <link rel="stylesheet" href="vendors/css/ionicons.min.css"/>
     <link rel="stylesheet" href="ressources/css/style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"/>
     <title>Omnifood</title>
@@ -28,5 +29,167 @@
             <a class=" btn btn-ghost" href="#">Show me more</a>
         </div>
     </header>
+    <section class="section-features">
+        <div class="row">
+            <h2>Get food fast &ndash; not fast food.</h2>
+            <p class="long-copy">
+                Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+            </p>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <i class="ion-ios-infinite-outline icon-big"></i>
+                <h3>Up to 365 days/year</h3>
+                <p class="">Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="ion-ios-stopwatch-outline icon-big"></i>
+                <h3>Ready in 20 minutes</h3>
+                <p class="">You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="ion-ios-nutrition-outline icon-big"></i>
+                <h3>100% organic</h3>
+                <p class="">All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="ion-ios-cart-outline icon-big"></i>
+                <h3>Order anything</h3>
+                <p class="">We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
+
+<!-- 
+
+
+
+
+
+
+
+
+
+
+
+
+Section 2: Favourite meals
+Title: None
+
+	1.	Korean bibimbap with egg and vegetables
+	2.	Simple italian pizza with cherry tomatoes
+	3.	Chicken breast steak with vegetables 
+	4.	Autumn pumpkin soup
+	5.	Paleo beef steak with vegetables
+	6.	Healthy baguette with egg and vegetables
+	7.	Burger with cheddar and bacon
+	8.	Granola with cherries and strawberries
+
+(see image numbers in the assets folder)
+
+Section 3: How it works
+Title: How it works - Simple as 1, 2, 3
+
+	1.	Choose the subscription plan that best fits your needs and sign up today.
+	2.	Order your delicious meal using our mobile app or website. Or you can even call us!
+	3.	Enjoy your meal after less than 20 minutes. See you the next time!
+
+
+
+Section 4: Cities
+Title: We're currently in these cities
+
+Lisbon
+1600+ happy eaters
+60+ top chefs
+@omnifood_lx
+
+San Francisco
+3700+ happy eaters
+160+ top chefs
+@omnifood_sf
+
+Berlin
+2300+ happy eaters
+110+ top chefs
+@omnifood_berlin
+
+London
+1200+ happy eaters
+50+ top chefs
+@omnifood_london
+
+
+Section 5: Customer testimonials
+Title: Our customers can't live without us
+
+Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+(Alberto Duncan)
+
+Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+(Joana Silva)
+
+I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+(Milton Chapman)
+
+
+Section 6: Sign up and pricing plans
+Title: Start eating healthy today
+
+Plan 1: Premium
+399$ per month
+That’s only 13.30$ per meal
+1 meal every day
+Order 24/7
+Access to newest creations
+Free delivery
+
+
+Plan 2: Pro
+149$ per month
+That’s only 14.90$ per meal
+1 meal 10 days/month
+Order 24/7
+Access to newest creations
+Free delivery
+
+
+Plan 3: Starter
+19$ per meal
+1 meal
+Order from 8 am to 12 pm
+Free delivery
+
+Section 7: Contact form
+Title: We're happy to hear from you
+
+Fields to include:
+Name
+Email
+How did you find us?
+Newsletter
+Drop us a line
+
+Section 8: Footer
+Title: None
+
+Navigation:
+1. About us
+2. Blog
+3. Press
+4. iOS App
+5. Android App
+
+Also include links to facebook, twitter, google+ and Instagram accounts.
+
+
+
+
+
+
+
+
+
+ -->
