--- a/OMNIFOOD/index.html
+++ b/OMNIFOOD/index.html
@@ -59,35 +59,100 @@
             </div>
         </div>
     </section>
+    <section class="section-meals">
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/3.jpg" alt="Chicken breast steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/4.jpg" alt="Autumn pumpkin soup">
+                </figure>
+            </li>
+        </ul>
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/5.jpg" alt="Paleo beef steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/7.jpg" alt="Burger with cheddar and bacon">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="ressources/img/8.jpg" alt="Granola with cherries and strawberries">
+                </figure>
+            </li>
+        </ul>
+    </section>
+    <section class="section-steps">
+        <div class="row">
+            <h2>How it works &ndash; Simple as 1, 2, 3</h2>
+        </div>
+        <div class="row">
+        <div class="col span-1-of-2">
+            <img src="ressources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
+        </div>
+        <div class="col span-1-of-2">
+            <div class="works-shop">
+                <div>1</div>
+                <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+            </div>
+            <div class="works-shop">
+                <div>2</div>
+                <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+            </div>
+            <div class="works-shop">
+                <div>3</div>
+                <p>	Enjoy your meal after less than 20 minutes. See you the next time!</p>
+            </div>
+
+            <a href="#" class="btn-app"><img src="ressources/img/download-app.svg" alt="App Store button"></a>
+
+            <a href="#" class="btn-app"><img src="ressources/img/download-app-android.png" alt="App Store button"></a>
+        </div>
+    </div>
+    </section>
 </body>
 </html>
 
+
+
+
+
+
+
+
+
+
+
 <!-- 
-
-
-
-
-
-
-
-
-
-
-
 
 Section 2: Favourite meals
 Title: None
 
-	1.	Korean bibimbap with egg and vegetables
-	2.	Simple italian pizza with cherry tomatoes
-	3.	Chicken breast steak with vegetables 
-	4.	Autumn pumpkin soup
-	5.	Paleo beef steak with vegetables
-	6.	Healthy baguette with egg and vegetables
-	7.	Burger with cheddar and bacon
-	8.	Granola with cherries and strawberries
 
-(see image numbers in the assets folder)
+
 
 Section 3: How it works
 Title: How it works - Simple as 1, 2, 3
