--- a/OMNIFOOD/index.html
+++ b/OMNIFOOD/index.html
@@ -110,7 +110,7 @@
             <h2>How it works &ndash; Simple as 1, 2, 3</h2>
         </div>
         <div class="row">
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 steps-box">
             <img src="ressources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
         </div>
         <div class="col span-1-of-2">
@@ -133,6 +133,11 @@
         </div>
     </div>
     </section>
+    <section class="section-cities">
+        <div class="row">
+            <h2>We're currently in these cities</h2>
+        </div>
+    </section>
 </body>
 </html>
 
@@ -152,14 +157,6 @@ Section 2: Favourite meals
 Title: None
 
 
-
-
-Section 3: How it works
-Title: How it works - Simple as 1, 2, 3
-
-	1.	Choose the subscription plan that best fits your needs and sign up today.
-	2.	Order your delicious meal using our mobile app or website. Or you can even call us!
-	3.	Enjoy your meal after less than 20 minutes. See you the next time!
 
 
 
