--- a/OMNIFOOD/index.html
+++ b/OMNIFOOD/index.html
@@ -60,7 +60,7 @@
         </div>
     </section>
     <section class="section-meals">
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="ressources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -82,7 +82,7 @@
                 </figure>
             </li>
         </ul>
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="ressources/img/5.jpg" alt="Paleo beef steak with vegetables">
@@ -114,21 +114,19 @@
             <img src="ressources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
         </div>
         <div class="col span-1-of-2">
-            <div class="works-shop">
+            <div class="works-step">
                 <div>1</div>
                 <p>Choose the subscription plan that best fits your needs and sign up today.</p>
             </div>
-            <div class="works-shop">
+            <div class="works-step">
                 <div>2</div>
                 <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
             </div>
-            <div class="works-shop">
+            <div class="works-step">
                 <div>3</div>
                 <p>	Enjoy your meal after less than 20 minutes. See you the next time!</p>
             </div>
-
             <a href="#" class="btn-app"><img src="ressources/img/download-app.svg" alt="App Store button"></a>
-
             <a href="#" class="btn-app"><img src="ressources/img/download-app-android.png" alt="App Store button"></a>
         </div>
     </div>
