--- a/OMNIFOOD/index.html
+++ b/OMNIFOOD/index.html
@@ -135,6 +135,98 @@
         <div class="row">
             <h2>We're currently in these cities</h2>
         </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <img src="ressources/img/lisbon-3.jpg" alt="Lisbon city">
+                <h3>Lisbon</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person icon-small"></i>
+                1600+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-ios-star icon-small"></i>
+                    60+ top chefs                
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                   <a href="">@omnifood_lx</a>                 
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="ressources/img/san-francisco.jpg" alt="San-Francisco city">
+                <h3>San Francisco</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person icon-small"></i>
+                    3700+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-ios-star icon-small"></i>
+                    160+ top chefs                
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                   <a href="#">@omnifood_sf</a>                
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="ressources/img/berlin.jpg" alt="Berlin city">
+                <h3>Berlin</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person icon-small"></i>
+                    2300+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-ios-star icon-small"></i>
+                    110+ top chefs                
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                   <a href="#">@omnifood_berlin</a>                 
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="ressources/img/london.jpg" alt="London city">
+                <h3>London</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person icon-small"></i>
+                    1200+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-ios-star icon-small"></i>50+ top chefs              
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                    <a href="#">@omnifood_london</a>               
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-testimonials">
+        <div class="row">
+           <h2>Our customers can't live without us</h2> 
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    <cite><img src="ressources/img/customer-1.jpg" alt="Alberto Duncan">Alberto Duncan</cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+                    
+                    <cite><img src="ressources/img/customer-2.jpg" alt="Joana Silva">Joana Silva</cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+
+                    <cite><img src="ressources/img/customer-3.jpg" alt="Milton Chapman">Milton Chapman</cite>
+                </blockquote>
+            </div>
+        </div>
     </section>
 </body>
 </html>
@@ -158,28 +250,6 @@ Title: None
 
 
 
-Section 4: Cities
-Title: We're currently in these cities
-
-Lisbon
-1600+ happy eaters
-60+ top chefs
-@omnifood_lx
-
-San Francisco
-3700+ happy eaters
-160+ top chefs
-@omnifood_sf
-
-Berlin
-2300+ happy eaters
-110+ top chefs
-@omnifood_berlin
-
-London
-1200+ happy eaters
-50+ top chefs
-@omnifood_london
 
 
 Section 5: Customer testimonials
@@ -188,11 +258,9 @@ Title: Our customers can't live without us
 Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
 (Alberto Duncan)
 
-Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
-(Joana Silva)
 
-I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
-(Milton Chapman)
+
+
 
 
 Section 6: Sign up and pricing plans
